--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <cdk.version>1.134.0</cdk.version>
-        <junit.version>5.7.1</junit.version>
+        <cdk.version>1.147.0</cdk.version>
+        <junit.version>5.8.2</junit.version>
     </properties>
 
     <build>
@@ -43,6 +43,25 @@
             <artifactId>core</artifactId>
             <version>${cdk.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>ec2</artifactId>
+            <version>${cdk.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>ecs</artifactId>
+            <version>${cdk.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>ecs-patterns</artifactId>
+            <version>${cdk.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>software.amazon.awscdk</groupId>
             <artifactId>assertions</artifactId>
